changed image tag from latest to jessie

--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -1,4 +1,4 @@
-FROM resin/rpi-raspbian:latest
+FROM resin/rpi-raspbian:jessie
 MAINTAINER toughIQ <toughiq@gmail.com>
 
 ADD http://pub.sgripon.net/owncloud-client/rpi3/owncloud-client-2.2.4_armhf.deb /
