added info and settings to files due to new SYNC_HIDDEN switch

--- a/docker-compose.rpi.yml
+++ b/docker-compose.rpi.yml
@@ -11,5 +11,6 @@ occlient:
     - OC_WEBDAV=remote.php/webdav
     - OC_FILEPATH=/
     - TRUST_SELFSIGN=0
+    - SYNC_HIDDEN=0
     - RUN_INTERVAL=30
     - RUN_UID=1000
