--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -26,5 +26,6 @@ ENV OC_USER=oc_username \
     OC_WEBDAV=remote.php/webdav \
     OC_FILEPATH=/ \
     TRUST_SELFSIGN=0 \
+    SYNC_HIDDEN=0 \
     RUN_INTERVAL=30 \
     RUN_UID=1000
