--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -27,5 +27,6 @@ ENV OC_USER=oc_username \
     OC_FILEPATH=/ \
     TRUST_SELFSIGN=0 \
     SYNC_HIDDEN=0 \
+    SILENCE_OUTPUT=1 \
     RUN_INTERVAL=30 \
     RUN_UID=1000
