--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,6 @@ occlient:
     - SYNC_HIDDEN=0
     - SILENCE_OUTPUT=1
     - RUN_INTERVAL=30
-    - RUN_UID=1000
+    - RUN_UID=99
+    - RUN_GID=100
 
